# traefik-guard

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.build/: Dockerfile  Dockerfile.alpine
src/: cli.rs  diacritics.rs  endpoints.rs  logging.rs  main.rs  proto.rs  state.rs  tags.rs  visitor.rs
src/endpoints/: axum_helpers.rs  client_ip.rs  metrics.rs  openapi.rs  prelude.rs  react.rs  server.rs
