[package]
name = "traefik-guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
atty = "0.2.14"
clap = { version = "4.1.6", features = ["env", "derive"] }
color-eyre = "0.6.2"
ipnetwork = "0.20.0"
maxminddb = "0.23.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
