[package]
name = "traefik-guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atty = "0.2"
axum = { version = "0.6", features = ["headers", "macros"] }
chrono = "0.4"
clap = { version = "4.1", features = ["env", "derive"] }
color-eyre = "0.6"
forwarded-header-value = "0.1"
ipnetwork = "0.20"
lazy_static = "1.4"
maxminddb = "0.23"
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.26", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "tokio", "trace", "limit"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "3.0", features = ["axum_extras"] }
